@@ -115,13 +115,17 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-206 (16 oct 2010 - ???) SLOC ??? UT ??? FT ??:??
-- (4) Drawing process works but nothing appears
+- (8) Brush drawrectangle draw again
+- Brush::debug() uncommented
+- Overlays draw again
+- Implemented Brush's blend mode
+- Drawing process works but nothing appears
 - GameEngine uses OgreGuiRenderQueueListener
 - OgreGuiRenderQueueListener implementation
 - Fixed some doxygen warnings
    Drawable, Container, Brush, TextureNotFoundException, SkinNotFoundException
 
-* v0.0.5-205 (16 aug 2010 - 16 oct 2010) SLOC 41,316 UT ??? FT 59:32
+* v0.0.5-205 (16 aug 2010 - 16 oct 2010) SLOC 41,316 UT 250 FT 59:32
 - Container::draw() draws all ist childs
 - Drawable::draw() implementation
 - Window constructor uses Drawable::loadSkinnableTexture()
