@@ -1,3 +1,11 @@
+2010-10-17 Jerome Pasquier  <rainbru@free.fr>
+
+	* src/ogreGui/Brush.cpp (debug): uncommented.
+	* src/ogreGui/Drawable.cpp (draw): call reset() to prevent overlays
+	to be hidden.
+	
+	* src/ogreGui/Brush.cpp : Implemented the brush's blend modes.
+
 2010-10-16 Jerome Pasquier  <rainbru@free.fr>
 
 	* src/ogreGui/OgreGuiRenderQueueListener : Implemented.
